Gnome: Fix unreadable text in calendar events

--- a/gtk-3.20/gtk.css
+++ b/gtk-3.20/gtk.css
@@ -5481,6 +5481,16 @@ headerbar .nautilus-window .path-buttons-box button:focus .subtitle {
   #gnc-id-main-window .arrow.button.toggle:hover {
     border-color: rgba(189, 147, 249, 0.5); }
 
+/*******************
+ * Calendar events *
+********************/
+.color-light.timed label {
+  color: #f8f8f2;
+  opacity: 1; }
+.week-view .color-light.timed label, .color-light label, .year-view .color-light:not(.timed) label {
+  color: #1e1f29;
+  opacity: 1; }
+
 /********
  * Gala *
  *******/
