--- a/gtk-4.0/gtk-dark.css
+++ b/gtk-4.0/gtk-dark.css
@@ -5753,6 +5753,16 @@ headerbar .nautilus-window .path-bar-box .subtitle {
   #gnc-id-main-window .arrow.button.toggle:hover {
     border-color: rgba(189, 147, 249, 0.5); }
 
+/*******************
+ * Calendar events *
+********************/
+.color-light.timed label, .color-light .event-popover label {
+  color: #f8f8f2;
+  opacity: 1; }
+.color-light label {
+  color: #1e1f29;
+  opacity: 1; }
+
 /********
  * Gala *
  *******/
